# SNMP

./: .gitignore  README.md  config.txt  dialog_window.py  document.tex  list.bib  main.py  preamble.tex  titlepage.tex  utils.py
report/: list.bib  titlepage.tex
report/tex/: conc.tex  stack.tex  work.tex
snmp/: item.py  pyproject.toml  snmp.py
snmp/snmp/: main.py  snmp.py
tex/: conc.tex  literature.tex  stack.tex  task.tex  work.tex
